src/styles.css
/* CSS Reset from https: //www.joshwcomeau.com/css/custom-css-reset */

/* 1. Use a more-intuitive box-sizing model */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* 2. Remove default margin */
* {
  margin: 0;
}

/* 3. Enable keyword animations */
@media (prefers-reduced-motion: no-preference) {
  html {
    interpolate-size: allow-keywords;
  }
}

body {
  /* 4. Add accessible line-height */
  line-height: 1.5;
  /* 5. Improve text rendering */
  -webkit-font-smoothing: antialiased;
}

/* 6. Improve media defaults */
img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}

/* 7. Inherit fonts for form controls */
input,
button,
textarea,
select {
  font: inherit;
}

/* 8. Avoid text overflows */
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

/* 9. Improve line wrapping */
p {
  text-wrap: pretty;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  text-wrap: balance;
}

/*
  10. Create a root stacking context
*/
#root,
#__next {
  isolation: isolate;
}

/* End of CSS Reset */

:root {
  --main-background-color: #FAF9F5;
  --list-card-color: #FFFFFF;
  --list-card-shadow: color-mix(in srgb, var(--list-card-color) 80%, black);
  --main-text-color: #1F1F1F;
  --theme-name: light;

  --card-height: 500px;
  --card-width: 375px;
}

@media (prefers-color-scheme: dark) {
  :root {
    --main-background-color: #262624;;
    --list-card-color: #30302E;
    --list-card-shadow: color-mix(in srgb, var(--list-card-color) 95%, white);
    --main-text-color: #F9F8F6;
    --theme-name: dark;
  }
}

/* Center the dialog */
dialog {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

body {
  background-color: var(--main-background-color);
  color: var(--main-text-color);
}

ul {
  padding: 0;
}

li {
  padding: 4px;
  list-style: none;
}

.list-board {
  margin: 40px;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(var(--card-width), 1fr));
  gap: 20px;
}

.list-card {
  position: relative;
  min-height: var(--card-height);
  width: var(--card-width);
  background-color: var(--list-card-color);
  box-shadow: 0.5px 0.5px 5px var(--list-card-shadow);
  border-radius: 50px;
  padding: 20px;
}

.list-item {
  display: flex;
  gap: 8px;
}

.text-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.due-date-label {
  display: flex;
  justify-content: space-between;
}

.delete-list {
  position: absolute;
  top: 20px;
  right: 24px;
}

.list-item .expand-todo::after {
  content: "v";
}

.list-item.expanded .expand-todo::after {
  content: "^";
}

.todo-description {
  display: none;
}

.list-item.expanded .todo-description {
  display: block;
}

